[#51278267] Fixing contactus on mobile etc  * Making textarea not resizable (always)  * Changing some layout things (padding etc)  * Ensuring labels always stay in-line with inputs on 320px+ screens

--- a/source/stylesheets/homepage/_contactus.css.scss
+++ b/source/stylesheets/homepage/_contactus.css.scss
@@ -74,6 +74,7 @@
     }
     @include breakpoint(mobile) { 
       font-size: 18px;
+      padding: 5px 40px;
     }
   }
 
@@ -89,7 +90,7 @@
       left: 0;
       right: 0;
       width: 100%;
-      padding: 10px 0;
+      padding: 5px 0;
     }
 
     #know {
@@ -137,7 +138,7 @@
       padding: 90px 0px 10px 0px;
     }
     @include breakpoint(mobile) {
-      padding: 90px 20px 0 0;;
+      padding: 20px 0 0 0;
     }
 
     .contact-form-group {
@@ -158,6 +159,11 @@
       background: $amoebaGreen;
       font-size: 16px;
       line-height: 16px;
+
+      @include breakpoint(mobile) {
+        padding: 3px 2px 2px 3px;
+        width: 70px;
+      }
     }
 
     input:not([type=submit]):not([type=file]) {
@@ -176,6 +182,7 @@
       border: none;
       background-color: white;
       color: $amoebaGreenDark;
+      resize: none;
     }
 
     p {
